# UVface

./: CMakeLists.txt  Dockerfile  README.md  dataBaseImages.cpp  dataBaseImages.h  descriptor.cpp  descriptor.h  detector.cpp  detector.h  dictionary.cpp  dictionary.h  gtp2.cpp  gtp2.h  guiConfigDetector.cpp  guiConfigDetector.h  guiFaceRecognizer.cpp  guiFaceRecognizer.h  guiOtherConfigurations.cpp  guiOtherConfigurations.h  interfazPrincipal.cpp  interfazPrincipal.h  main.cpp  plotSparseSolution.cpp  plotSparseSolution.h  recognizerFacial.cpp  recognizerFacial.h  trackerWindows.cpp  trackerWindows.h  trackerWindows_gui.cpp  trackerWindows_gui.h
cascading_classifiers/: clasificador_9_12102_unconstrained_f_max_0_2_evaluation.xml
pca/: pca.xml
stream/: stream.py
